downgrade java for use as sylvarion plugin dependency